// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all stories active search with no results 1`] = `
<div
  aria-expanded={true}
  aria-haspopup="listbox"
  aria-label="Search or jump to story"
  aria-owns="moderate-searchBar-listBox"
  className="SubBar-root Bar-root"
  data-testid="moderate-searchBar-container"
  role="combobox"
>
  <div
    className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
  >
    <div
      className="Backdrop-root Backdrop-active Bar-bumpZIndex"
    />
    <form
      aria-label="Stories"
      className="Bar-bumpZIndex"
      onMouseDown={[Function]}
      onSubmit={[Function]}
      role="search"
    >
      <div
        className="Popover-root"
      >
        <div>
          <div
            className="Box-root Flex-root Field-root Flex-flex Flex-alignStretch"
          >
            <div
              className="Box-root Flex-root Field-begin Flex-flex Flex-alignCenter"
            >
              <span
                className="SvgIcon-root SvgIcon-sm Field-searchIcon SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="-0.25 -0.25 24.5 24.5"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0.750 9.812 A9.063 9.063 0 1 0 18.876 9.812 A9.063 9.063 0 1 0 0.750 9.812 Z"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    transform="translate(-3.056 4.62) rotate(-23.025)"
                  />
                  <path
                    d="M16.221 16.22L23.25 23.25"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
              <div
                className="Field-beginStories"
              >
                Stories:
              </div>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="moderate-searchBar-listBox"
              aria-label="Search or jump to story..."
              autoComplete="off"
              className="Field-input"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="search by story title, author, url, id, etc."
              spellCheck={false}
              value=""
            />
            <div
              className="Box-root Flex-root Field-end Flex-flex Flex-alignCenter"
            >
              <button
                className="BaseButton-root Field-searchButton"
                disabled={true}
                onBlur={[Function]}
                onFocus={[Function]}
                onMouseOut={[Function]}
                onMouseOver={[Function]}
                onTouchEnd={[Function]}
                type="submit"
              >
                Search
              </button>
            </div>
          </div>
        </div>
        <div
          aria-hidden={false}
          id="moderate-searchBar-popover"
          role="dialog"
        >
          <div
            className="Popover-popover Bar-popover Popover-bottom"
            style={
              Object {
                "left": 0,
                "opacity": 0,
                "pointerEvents": "none",
                "position": "absolute",
                "top": 0,
              }
            }
          >
            <ul
              className="Bar-listBox"
              id="moderate-searchBar-listBox"
              role="listbox"
            >
              <ul
                aria-labelledby="moderate-searchBar-context-title"
                className="Group-root"
                id="moderate-searchBar-context"
                role="group"
              >
                <li
                  className="Group-title"
                  id="moderate-searchBar-context-title"
                >
                  Currently moderating
                </li>
                <li
                  aria-selected={false}
                  className="Option-root"
                  id="moderate-searchBar-listBoxOption-0"
                  onClick={[Function]}
                  role="option"
                >
                  <a
                    className="Option-link"
                    href="/admin/moderate/reported"
                    tabIndex={-1}
                  >
                    <div
                      className="Option-container"
                    >
                      <div
                        className="Option-title"
                      >
                        <div
                          className="AriaInfo-root"
                        >
                          Go to
                        </div>
                        <span>
                          All stories
                        </span>
                      </div>
                      <div
                        className="Option-details"
                      />
                    </div>
                  </a>
                </li>
              </ul>
            </ul>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`all stories active search with too many results 1`] = `
<li
  aria-selected={false}
  className="SeeAllOption-root"
  id="moderate-searchBar-listBoxOption-3"
  onClick={[Function]}
  role="option"
>
  <a
    className="SeeAllOption-link"
    href="/admin/stories?q=InterestingStory"
    tabIndex={-1}
  >
    <span>
      See all results
    </span>
    <span
      className="SvgIcon-root SvgIcon-xs SeeAllOption-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
    >
      <svg
        viewBox="-0.25 -0.25 24.5 24.5"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.5.75,16.22,11.47a.749.749,0,0,1,0,1.06L5.5,23.25"
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </a>
</li>
`;

exports[`all stories renders search bar 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-label="Search or jump to story"
  aria-owns="moderate-searchBar-listBox"
  className="SubBar-root Bar-root"
  data-testid="moderate-searchBar-container"
  role="combobox"
>
  <div
    className="Box-root Flex-root SubBar-container Flex-flex Flex-justifyCenter Flex-alignCenter"
  >
    <div
      className="Backdrop-root Bar-bumpZIndex"
    />
    <form
      aria-label="Stories"
      className="Bar-bumpZIndex"
      onMouseDown={[Function]}
      onSubmit={[Function]}
      role="search"
    >
      <div
        className="Popover-root"
      >
        <div>
          <div
            className="Box-root Flex-root Field-root Flex-flex Flex-alignStretch"
          >
            <div
              className="Box-root Flex-root Field-begin Flex-flex Flex-alignCenter"
            >
              <span
                className="SvgIcon-root SvgIcon-sm Field-searchIcon SvgIcon-strokeWidthRegular SvgIcon-noFill"
              >
                <svg
                  viewBox="-0.25 -0.25 24.5 24.5"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0.750 9.812 A9.063 9.063 0 1 0 18.876 9.812 A9.063 9.063 0 1 0 0.750 9.812 Z"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                    transform="translate(-3.056 4.62) rotate(-23.025)"
                  />
                  <path
                    d="M16.221 16.22L23.25 23.25"
                    fill="none"
                    stroke="currentColor"
                    strokeLinecap="round"
                    strokeLinejoin="round"
                  />
                </svg>
              </span>
            </div>
            <input
              aria-autocomplete="list"
              aria-controls="moderate-searchBar-listBox"
              aria-label="Search or jump to story..."
              autoComplete="off"
              className="Field-input Field-inputWithTitle"
              name="search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="All stories"
              spellCheck={false}
              value=""
            />
            <div
              className="Box-root Flex-root Field-end Flex-flex Flex-alignCenter"
            />
          </div>
        </div>
        <div
          aria-hidden={true}
          id="moderate-searchBar-popover"
          role="dialog"
        />
      </div>
    </form>
  </div>
</div>
`;
